46
================

21/03/22 Stack nested tables vertically on mobile to prevent h scroll #1103
19/03/22 Remove redundant tooltips from animals, add callouts/placeholders
19/03/22 Fix CurrentOwnerFirstname/Lastname tokens for non-shelter animals
17/03/22 Prevent endless loop with collisions using OOO coding scheme
17/03/22 Bulk change animals can now remove flags #1112
17/03/22 Publishing option to include/exclude non-microchipped #1113
17/03/22 CSV import: allow import of PDF files via ANIMALPDFDATA/NAME #888
17/03/22 PetRescue: always send microchips as they have a hide option now
15/03/22 Allow adoption checkout from Move->Adopt an animal #1110
15/03/22 SavourLife: Clear dogId after calling setDogAdopted/DeleteDog
15/03/22 Auto-updater should still check DB type/version
14/03/22 DB update to remove old ASM2 report definitions
11/03/22 Send saved clinic documents to animal if owner not available
11/03/22 Audit emails sent by diary notes
11/03/22 Fix querybuilder, CodeMirror schema change broke it
10/03/22 Add media_file service API call
09/03/22 PetFinder: Filter out permanent foster/trials from stray upload
09/03/22 Sort incidents desc so newest are included above search limit
09/03/22 Advanced find intake searches DateBroughtIn and MostRecentEntry
09/03/22 Correct table/column schema for new CodeMirror
09/03/22 Fix RTL issues with SQL/HTML editor
09/03/22 Update CodeMirror to latest stable release
07/03/22 Validate that online form field names are unique #1111
07/03/22 Coordinator/fosterer shelter view group by species

45
================

04/03/22 Use viewport units to increase sig size on mobile #1109
03/03/22 Fix non-shelter location filter with search #1107
03/03/22 Clone microchip number if allowing duplicates is on
02/03/22 Add some additional emblem icons
01/03/22 Use age instead of age group for shelter view sort
28/02/22 Fix non-shelter owner additional fields in templates
28/02/22 Shelterview: Location and Species (Age group tertiary sort)