@@ -1,6 +1,7 @@
 46
 ================
 
+21/03/22 Setting location+unit via bulk change animals now writes log entries
 21/03/22 Stack nested tables vertically on mobile to prevent h scroll #1103
 19/03/22 Remove redundant tooltips from animals, add callouts/placeholders
 19/03/22 Fix CurrentOwnerFirstname/Lastname tokens for non-shelter animals
